Fix media src links
So, the slashes might be messing up the media embeds in the captive portal... Ran into this issue during the workshop.

--- a/Example Projects/2-Pocket_Portal--Simple_Page/data/index.html
+++ b/Example Projects/2-Pocket_Portal--Simple_Page/data/index.html
@@ -19,7 +19,7 @@
     internet! Enjoy this example page instead! 😊</p>
 
   <figure class="wide-media">
-    <img src="/media-cover_image.JPG" alt="photograph of spider plants growing against a white concrete wall in Kinshasa">
+    <img src="media-cover_image.JPG" alt="photograph of spider plants growing against a white concrete wall in Kinshasa">
     <figcaption>Sample caption text</figcaption>
   </figure>
 
@@ -33,7 +33,7 @@
 
   <h2>Audio</h2>
 
-  <audio controls src="/media-audio.mp3" type="audio/mpeg"></audio>
+  <audio controls src="media-audio.mp3" type="audio/mpeg"></audio>
 
   <h2>Heading</h2>
 
@@ -46,7 +46,7 @@
 
   <h2>Video</h2>
 
-  <video controls loop src="/media-video.mp4" type="video/mp4"></video>
+  <video controls loop src="media-video.mp4" type="video/mp4"></video>
 
   <h2>Heading</h2>
 
